backend-deployment.yaml
apiVersion: apps/v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec: 
      containers: 
      - name: backend-app
        image: ashoknallam/backend:latest 
        ports: 
        - containerPort: 5000
