ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    # No rewrite-target annotation here, as we want paths to be passed as-is
spec:
  rules:
  - http:
      paths:
      - path: /submit # Exact match for the form submission POST request
        pathType: Exact
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /success # If your frontend has a success page accessed directly
        pathType: Exact
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: / # Catch-all for the root and any other frontend paths
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
